--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,9 +13,11 @@
  <h1>Este es mi Blog </h1>
  </header>
  <!-- Contenido -->
- <section> 
+<section> 
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>El mentalista</p>
+ <p>Sinopsis</p>
+ <p>En un parque de atracciones a las afueras de Estocolmo aparece el cuerpo de una joven asesinada de forma macabra: atravesada por múltiples espadas dentro de una caja. La agente de policía Mina Dabiri, reservada y metódica, forma parte del equipo especial de investigación que se hace cargo del caso. Cuando Mina agota todas las posibles pistas, recurre al conocido mentalista Vincent Walder para que los ayude a detectar los indicios que podrían conectar el asesinato con el mundo del ilusionismo. Con la aparición de un nuevo cuerpo, Mina y Vincent entienden que se enfrentan a un despiadado asesino en serie y comienzan una trepidante carrera contrarreloj para descifrar los códigos numéricos y las trampas visuales de una mente brillante y perversa. Un apasionante viaje a la parte más oscura del alma humana que no dejará indiferente a ningún lector.</p>
 </section>
  <section> 
 <b>Películas</b>
